# SourceSDDS

./: .cproject  .gitignore  .gitlab-ci.yml  .md5sums  .project  HEADER  README.md  SourceSDDS.prf.xml  SourceSDDS.scd.xml  SourceSDDS.spd.xml  build.sh  rh.SourceSDDS.spec
cpp/: .md5sums  AffinityUtils.h  Makefile.am  Makefile.am.ide  SddsToBulkIOProcessor.cpp  SddsToBulkIOProcessor.h  SddsToBulkIOUtils.cpp  SddsToBulkIOUtils.h  SmartPacketBuffer.h  SocketReader.cpp  SocketReader.h  SourceSDDS.cpp  SourceSDDS.h  SourceSDDS_base.cpp  SourceSDDS_base.h  build.sh  configure.ac  main.cpp  reconf  sddspacket.h  struct_props.h
cpp/socketUtils/: SourceNicUtils.cpp  SourceNicUtils.h  multicast.cpp  multicast.h  unicast.cpp  unicast.h
cpp/test_utils/: Makefile.am  sddsShooter.c
cpp/utils/: Makefile.in
tests/: .md5sums  Sdds.py  bulkio_helpers_sdds.py  multicast.py  test_SourceSDDS.py  unicast.py
